--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -10,7 +10,11 @@
     {% if author.avatar contains "://" %}
     	<img src="{{ author.avatar }}" alt="{{ author.name }}"  fetchpriority="high" />
     {% else %}
-    	<img src="{{ author.avatar | prepend: "/images/" | prepend: base_path }}" class="author__avatar" alt="{{ author.name }}"  fetchpriority="high" />
+    	{% if base_path != "" %}
+    	  <img src="{{ base_path }}/images/{{ author.avatar }}" class="author__avatar" alt="{{ author.name }}"  fetchpriority="high" />
+    	{% else %}
+    	  <img src="{{ site.baseurl }}/images/{{ author.avatar }}" class="author__avatar" alt="{{ author.name }}"  fetchpriority="high" />
+    	{% endif %}
     {% endif %}
   </div>
 
